fix label alignment on sea-shadow-model using same code from fish-modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,10 @@ a {
   min-width: 45px;
 }
 
+.current-collection-container {
+  text-align: center;
+}
+
 /* Edit Town */
 
 i:hover {
